name:                calculator
version:             0.1.0.10
synopsis:            A simple calculator
description:         Please see README.md
homepage:            http://github.com/juiko/calculator
license:             BSD3
license-file:        LICENSE
author:              Hector Orellana
maintainer:          hofm92@gmail.com
copyright:           2015 Hector Orellana
category:            CLI
build-type:          Simple
cabal-version:       >=1.10

executable calculator
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
